--- a/css/common.css
+++ b/css/common.css
@@ -66,7 +66,7 @@ hr,
 .view-more {
     display: block;
     width: 24.3rem;
-    height: 5rem;
+    height: 6rem;
     background: var(--main-color);
 
     font-weight: 700;
@@ -91,6 +91,13 @@ hr,
     height: 2rem;
     background: url(../img/arrow-right.svg) no-repeat 50%;
     filter: invert(1);
+}
+
+h2 {
+    font-family: "PuradakGentleGothicR";
+    font-size: 9.6rem;
+    line-height: 1;
+    color: #fff;
 }
 
 h3 {
@@ -273,4 +280,62 @@ body {
     font-size: 1.4rem;
 
     margin-top: 2.5rem;
+}
+
+@media screen and (max-width: 1440px) {
+    .inner {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    #header {
+        padding: 0 4rem;
+    }
+
+    #header nav {
+        height: 6rem;
+    }
+
+    .gnb,
+    .btn-login {
+        display: none;
+    }
+
+    .btn-menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 3rem;
+        height: 2.5rem;
+        background: url(../img/icon-more.svg) no-repeat 50% / cover;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    h3 {
+        font-size: 4rem;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    #header nav {
+        height: 5rem;
+    }
+
+    #header nav h1 a {
+        display: block;
+        width: 13.2rem;
+        height: 2rem;
+    }
+
+    #header nav h1 a img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .btn-menu {
+        width: 2rem;
+        height: 1.5rem;
+    }
 }
