--- a/css/common.css
+++ b/css/common.css
@@ -95,7 +95,7 @@ hr,
 
 h2 {
     font-family: "PuradakGentleGothicR";
-    font-size: 9.6rem;
+    font-size: max(5vw, 8.4rem);
     line-height: 1;
     color: #fff;
 }
@@ -174,6 +174,32 @@ body {
 #main section {
     padding: 12rem 0;
 }
+
+#main nav {
+    box-shadow: 0 2px 4px var(--black10p);
+}
+
+nav .sub-menu-swiper .swiper-slide {
+    display: flex;
+    flex-shrink: 1;
+}
+
+nav .sub-menu-swiper .swiper-slide a {
+    display: flex;
+
+    white-space: nowrap;
+
+    justify-content: center;
+    align-items: center;
+
+    height: 8rem;
+    padding: 2rem;
+
+    font-weight: 500;
+    font-size: 2rem;
+    color: #666;
+}
+
 /* //e-main */
 
 #footer {
@@ -310,15 +336,31 @@ body {
         height: 2.5rem;
         background: url(../img/icon-more.svg) no-repeat 50% / cover;
     }
+
+    h2 {
+        font-size: max(7.6364vw, 7.2rem);
+    }
 }
 
 @media screen and (max-width: 820px) {
+    h2 {
+        font-size: 7.2rem;
+    }
+
     h3 {
         font-size: 4rem;
+    }
+
+    #main section {
+        padding: 10rem 0;
     }
 }
 
 @media screen and (max-width: 430px) {
+    h2 {
+        font-size: 6.4rem;
+    }
+
     #header nav {
         height: 5rem;
     }
@@ -337,5 +379,27 @@ body {
     .btn-menu {
         width: 2rem;
         height: 1.5rem;
+    }
+
+    #main section {
+        padding: 8rem 0;
+    }
+
+    .foot-app a {
+        padding: 1.5rem;
+        border-radius: 5rem;
+        background: #fff;
+    }
+
+    .foot-app a i {
+        display: none;
+    }
+
+    .foot-app a::before {
+        content: "";
+
+        display: block;
+        width: 3.2rem;
+        height: 3.2rem;
     }
 }
